--- a/login.html
+++ b/login.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>git</title>
+	<title>Document</title>
 </head>
 <body>
-	login for
+	login form
 </body>
 </html>
